--- a/src/components/index.html
+++ b/src/components/index.html
@@ -10,14 +10,17 @@
         html {
             font-family: Quicksand, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 18px;
-            color: rgb(55, 55, 55);        }
+            color: rgb(55, 55, 55);
+            padding: 1em;        }
         body {
-            max-width: 600px;
-            margin: 20px auto;
+            max-width: 760px;
+            margin: 0 auto;
             font-size: 1em;
             text-align: center;
             line-height: 1.5;
-            padding: 0 20px;
+            padding: 0 2em;
+            border: 10px solid rgba(245, 70, 70, 0.3);
+            border-radius: 3em;
         }
         h1, h2, h3, h4 {
             font-family: Pacifico;
@@ -33,16 +36,15 @@
             clear: both;
             font-size: 2.2em;
             padding-bottom: 0.3em;
-            border-bottom: 2px solid rgb(245, 70, 70);
+            border-bottom:  3px solid rgba(245, 70, 70, 0.3);
             margin-bottom: 1em;
         }
         h3 {
-            display: inline-block;
+            /* display: inline-block; */
             clear: both;
             font-size: 1.8em;
-            padding-bottom: 0.3em;
-            border-bottom: 2px solid rgb(245, 70, 70);
-            margin-bottom: 0.6em;
+            padding-bottom: 0em;
+            margin-bottom: 0em;
         }
         h4 {
             font-size: 1.4em;
@@ -58,9 +60,11 @@
         p, li {
             font-size: 1em;
             padding-bottom: 0.8em;
+            font-weight: 400;
         }
         .logo{
             width: 7em;
+            margin: 20px 0 0 0;
         }
         #central ul li, #central p {
             text-align: left;
@@ -69,53 +73,64 @@
         }
         #motto img {
             margin-top: 30px;
-            margin-bottom: 10px;
+        }
+        #motto {
+            text-align: center;
         }
         #motto p {
+            font-weight: 500;
             margin: 0.8em;
             line-height: 0;
             font-size: 0.6em;
             text-transform: uppercase;
+            clear: both;
+            width: 100%;
         }
         #central>p {
             font-size: 1.2em;
             text-align: center;
         }
+        ul {
+            margin-bottom: 3em;
+        }
+        #motto p.spaced {
+            letter-spacing: 0.4em;
+            font-weight: 800;
+        }
 
     </style>
 </head>
 <body>
-    <img alt="Logo of Forma Digitalis" class="logo" src="./assets/forma-digitalis-logo.png">
+    <img alt="Logo of Forma Digitalis" class="logo" src="./assets/forma-digitalis-logo-flat-louie.png">
     
     <section id="central">
-        <h1>My First Deployed API</h1>
-        <h2>NC News Project Overview</h2>
+        <h1>NC News Project Overview</h1>
         <p>NC News is an application developed as part of the Northcoders bootcamp, designed to circulate news articles relevant to Northcoders. This project serves as a portfolio piece demonstrating practical application of backend development skills.</p>
 
-        <h3>Backend Development</h3>
-        <h4>Server & API (Express.js)</h4>
+        <h2>1. Backend Development</h2>
+        <h3>Server & API: Express.js</h3>
         <ul>
             <li><h5>Core Concepts:</h5> HTTP Servers, Express Servers, Routing, Model-View-Controller (MVC) architecture.</li>
             <li><h5>Implementation:</h5> Middleware for request handling, Error Handling strategies, Handling Empty Responses gracefully.</li>
         </ul>
-        <h4>Database (PostgreSQL/PSQL)</h4>
+        <h3>Database: PostgreSQL / PSQL</h3>
         <ul>
             <li><h5>Setup & Seeding:</h5> Creating a Database, Inserting Data, Seeding initial data, Managing separate Testing and Development Databases.</li>
             <li><h5>Interaction & Querying:</h5> Using Node-Postgres for application-database connection, Querying Data, Utilizing Foreign Keys and Joins, Implementing Aggregate Functions, Building Dynamic Queries.</li>
             <li><h5>Data Management:</h5> Updating Tables.</li>
         </ul>
-        <h3>Testing</h3>
+        <h2>2. Testing</h2>
         <ul>
             <li><h5>Methodology:</h5> Integration Testing to ensure different parts of the application work together.</li>
             <li><h5>Tools:</h5> Using SuperTest for testing HTTP servers.</li>
         </ul>
-        <h3>Development Workflow & Tools</h3>
+        <h2>3. Development Workflow & Tools</h2>
         <ul>
             <li><h5>Version Control:</h5> Git Branching strategies for managing code changes.</li>
             <li><h5>Environment:</h5> Managing Environment Variables for configuration.</li>
             <li><h5>Development Aids:</h5> Using NPM Scripts for task automation, Employing Nodemon for automatic server restarts during development.</li>
         </ul>
-        <h3>Deployment & CI/CD</h3>
+        <h2>4. Deployment & CI/CD</h2>
         <ul>
             <li><h5>Hosting:</h5> Deploying the application using platforms like Supabase and Render.</li>
             <li><h5>Automation:</h5> Implementing Continuous Integration and Continuous Delivery (CI/CD) pipelines, using GitHub Actions for automation.</li>
@@ -123,8 +138,8 @@
 
     </section>
     <figure id="motto">
-        <img alt="Logo of Forma Digitalis with Louie Morais' name" class="logo" src="./assets/forma-digitalis-logo-flat-louie.png">
-        <p>Creativity Through Code.</p>
+        <img alt="Logo of Forma Digitalis with Louie Morais' name" class="logo" src="./assets/forma-digitalis-logo.png">
+        <p class="spaced">Design Engineering</p>
         <p>2025 © Louie Morais - Forma Digitalis</p>
     </figure>
 </body>
