--- a/src/components/index.html
+++ b/src/components/index.html
@@ -11,7 +11,7 @@
             font-family: Quicksand, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-size: 18px;
             color: rgb(55, 55, 55);
-            padding: 1em;        }
+            padding: 1em 0;        }
         body {
             max-width: 760px;
             margin: 0 auto;
