--- a/src/components/index.html
+++ b/src/components/index.html
@@ -35,7 +35,6 @@
             display: inline-block;
             clear: both;
             font-size: 2.2em;
-            padding-bottom: 0.3em;
             border-bottom:  3px solid rgba(245, 70, 70, 0.3);
             margin-bottom: 1em;
         }
@@ -64,7 +63,7 @@
         }
         .logo{
             width: 7em;
-            margin: 20px 0 0 0;
+            margin: 40px 0 0 0;
         }
         #central ul li, #central p {
             text-align: left;
@@ -76,6 +75,7 @@
         }
         #motto {
             text-align: center;
+            padding-bottom: 20px;
         }
         #motto p {
             font-weight: 500;
