--- a/src/components/index.html
+++ b/src/components/index.html
@@ -43,7 +43,7 @@
             clear: both;
             font-size: 1.8em;
             padding-bottom: 0em;
-            margin-bottom: 0em;
+            margin-bottom: 0.3em;        
         }
         h4 {
             font-size: 1.4em;
@@ -58,6 +58,7 @@
         }
         p, li {
             font-size: 1em;
+            padding: 0;
             padding-bottom: 0.8em;
             font-weight: 400;
         }
@@ -91,6 +92,7 @@
             text-align: center;
         }
         ul {
+            margin:0;
             margin-bottom: 3em;
         }
         #motto p.spaced {
